<resources>
    <string name="app_name">Led Control</string>
    <string name="action_settings">Settings</string>
    <string name="edtTitle">ARDUINO LED CONTROLLER</string>
    <string name="edtPairedDevices">Show paired devices</string>
    <string name="title_activity_led_contol">ledContol</string>
    <string name="edtTitle2">ARDUINO LED CONTROLLER</string>
    <string name="btnTurnOn">Turn On</string>
    <string name="btnTurnOff">TURN OFF</string>
    <string name="btnDisconnect">Disconnect</string>
    <string name="lblBrightness">Brightness</string>
</resources>
