<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.anasaraid.ledcontrol.ledContol"
    tools:showIn="@layout/activity_led_contol">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/edtTitle2"
        android:id="@+id/edtTitle2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="25sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnTurnOn"
        android:id="@+id/btnTurnOn"
        android:layout_marginTop="68dp"
        android:layout_below="@+id/edtTitle2"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnTurnOff"
        android:id="@+id/btnTurnOff"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/btnTurnOn"
        android:layout_alignLeft="@+id/btnTurnOn"
        android:layout_alignStart="@+id/btnTurnOn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDisconnect"
        android:id="@+id/btnDisconnect"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="68dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblBrightness"
        android:id="@+id/lblBrightness"
        android:layout_marginTop="68dp"
        android:layout_below="@+id/btnTurnOff"
        android:layout_alignLeft="@+id/btnTurnOff"
        android:layout_alignStart="@+id/btnTurnOff" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_below="@+id/lblBrightness"
        android:layout_alignLeft="@+id/edtTitle2"
        android:layout_alignStart="@+id/edtTitle2"
        android:layout_marginTop="34dp"
        android:layout_alignRight="@+id/edtTitle2"
        android:layout_alignEnd="@+id/edtTitle2"
        android:max="255"
        android:progress="5"
        android:indeterminate="false" />
</RelativeLayout>
